# WebPlayer

./: README.md  pyproject.toml  start.bat
Evil_site/: db.sqlite3
Evil_site/Evil_site/: settings.py  urls.py
Evil_site/accounts/: forms.py  models.py  urls.py  views.py
Evil_site/accounts/migrations/: 0011_alter_user_options_alter_user_managers_and_more.py  0012_alter_user_gender.py  0013_remove_user_login_alter_user_username.py  0014_alter_user_photo.py  0015_client_track.py  0016_remove_user_musiclist.py
Evil_site/media/music/: 19.flac  20.flac  32.flac
Evil_site/music/: forms.py  models.py  urls.py  validators.py  views.py
Evil_site/music/migrations/: 0005_alter_track_file_alter_track_photo.py  0006_client_track.py  0007_delete_client_track.py  0008_track_time.py
Evil_site/static/css/: player.css  player_test.css  upper_window.css
Evil_site/static/scripts/: Base.js
Evil_site/staticfiles/css/: input-form.css  main.css  player.css
Evil_site/staticfiles/scripts/: edit_tracks.js  player.js  player_test.js
Evil_site/templates/: base.html  info.html  login.html  player.html  player_test.html  register.html  track_info.html  upload_track.html  upper.html
