[tool.poetry]
name = "evil-site"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.1.2"
djangorestframework = "^3.15.2"
django-extensions = "^3.2.3"
pillow = "^11.0.0"
django-cors-headers = "^4.5.0"
whitenoise = "^6.7.0"
pydub = "^0.25.1"
ffmpeg = "^1.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
